# rust-jit

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cpp/src/: main.cpp
docs/: ast.cpp  astv.cpp  bibfile.bib  conclusion.tex  evaluation.tex  implementation.tex  introduction.tex  main_ideas.tex  overview.tex  related_work.tex  report.aux  report.bbl  report.blg  report.fdb_latexmk  report.fls  report.tex  rust_ex1.rs  rust_ex2.rs
rust/: Cargo.toml
rust/src/: lib.rs
src/: CMakeLists.txt  ast.hpp  ast_printer.cpp  ast_printer.hpp  ast_visitor.hpp  environment.cpp  environment.hpp  ex1.rs  grammar.txt  interpreter.cpp  interpreter.hpp  lexer.cpp  lexer.hpp  main.cpp  object.hpp  parser.cpp  parser.hpp  token.hpp
src/ast/: ast.hpp  ast_printer.hpp  token.hpp
src/include/omr-jitbuilder/: BytecodeBuilder.hpp  IlBuilder.hpp  IlType.hpp  IlValue.hpp  JitBuilder.hpp  MethodBuilder.hpp  ThunkBuilder.hpp  TypeDictionary.hpp  VirtualMachineOperandArray.hpp  VirtualMachineOperandStack.hpp  VirtualMachineRegister.hpp  VirtualMachineRegisterInStruct.hpp  VirtualMachineState.hpp
src/interpreter/: environment.cpp  environment.hpp  interpreter.cpp  interpreter.hpp
src/jit/: jit.cpp  jit.hpp
src/lexer/: ex1.rs  lexer  lexer.cpp  lexer.hpp  main.cpp  test
src/parser/: parser.cpp  parser.hpp
